5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4074/executions/1578_1327.log
== TEST (2019-03-11 19:58:13) 
-- CODE:
print(90-35)
-- OUTPUT:
55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:58:24) 
-- CODE:
print(90-35)
-- EXECUTION TIME:
0.144209
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 20:00:44) 
-- CODE:
print(90-35)
-- OUTPUT:
55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 20:00:48) 
-- CODE:
print(90-35)
-- EXECUTION TIME:
0.147741
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:19:17) 
-- CODE:
print(90-35)
-- OUTPUT:
55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:19:39) 
-- CODE:
print(90-35)
-- OUTPUT:
55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:19:39) 
-- CODE:
print(90-35)
-- OUTPUT:
55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:20:12) 
-- CODE:
print(90-35)
-- EXECUTION TIME:
0.191877
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:20:43) 
-- CODE:
print(90-(+35)
-- ERROR:
File "XXXX", line 2
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:24:28) 
-- CODE:
print(90-55)
-- EXECUTION TIME:
0.182514
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:24:36) 
-- CODE:
print(90-55)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
